crates/macros/tests/ui/crud_table_row_duplicate_sort.rs
include!("crud_table_support.rs");

#[derive(Clone, nexora_macros::CrudTableRow)]
struct DuplicateSort {
    #[nexora(column(sortable, ascending))]
    name: String,
}

fn main() {}
